Prefer ArrayList over LinkedList (#41)
Most documents say that `ArrayList` is, in most use cases, almost to at
least as fast as `LinkedList` and definitely more space-efficient.
Therefore, substitute most uses of `LinkedList` with `ArrayList`.

While at it, substitute a use of Vector with ArrayList, because the
`Vector` class comes with an overhead as all its accesses are
`synchronized`. Although this particular use is not performance critical,
perhaps it's better to use `ArrayList` for uniformity with the rest of
the code.

Finally, use `List` type instead of `ArrayList` type.

---------

Co-authored-by: actyp <actypaldos@gmail.com>